--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "angular2-moment": "^1.3.3",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "datatables.net": "^1.10.15",
