--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.1.3",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.2",
     "@angular/core": "^4.1.3",
@@ -27,8 +28,10 @@
     "datatables.net": "^1.10.15",
     "datatables.net-dt": "^1.10.15",
     "font-awesome": "^4.7.0",
+    "ng-spin-kit": "^5.1.1",
     "ng2-daterangepicker": "^2.0.7",
     "ng2-inline-editor": "^0.1.1-alpha.20",
+    "ng2-loading-animate": "0.0.16",
     "ng2-select": "^1.2.0",
     "ng2-toasty": "^4.0.0",
     "ngx-bootstrap": "^1.6.6",
