--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-select": "^1.2.0",
     "ng2-toasty": "^4.0.0",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-pagination": "^3.0.0",
     "rxjs": "^5.1.0",
     "tinymce": "^4.6.1"
   },
