--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-   "start": "http-server",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update",
+     "ng": "ng",
     "e2e": "protractor",
-    "preinstall": "npm install -g http-server",
-    "postinstall": "ng build && mv dist/*" 
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "pretest": "npm run lint",
+    "start": "node server.js",
+    "postinstall": "ng build --target=production -e ${NODE_ENV:-production} --aot",
+    "update": "ng update --style scss --prefix xc",
+    "test": "ng test" 
   },
   "private": true,
   "dependencies": {
