--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "thecoffee",
   "version": "0.0.0",
   "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-     "ng": "ng",
+    "start": "http-server",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "pretest": "npm run lint",
-    "start": "node server.js",
-    "postinstall": "ng build --target=production -e ${NODE_ENV:-production} --aot",
-    "update": "ng update --style scss --prefix xc",
-    "test": "ng test" 
+    "preinstall": "npm install -g http-server",
+    "postinstall": "ng build && mv dist/* ."
   },
   "private": true,
   "dependencies": {
