--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "preinstall": "npm install -g http-server && npm install -g angular-cli@webpack",
+    "preinstall": "npm install -g http-server && npm install -g angular-cli",
     "postinstall": "ng build && mv dist/* ."
   },
   "private": true,
