--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "dependencies": {
     "@angular/cli": "1.0.2",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.2",
@@ -45,7 +46,9 @@
     "ngx-facebook": "^2.4.0",
     "ngx-pagination": "^3.0.0",
     "rxjs": "^5.1.0",
-    "tinymce": "^4.6.1"
+    "tinymce": "^4.6.1",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
