--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "preinstall": "npm install -g http-server",
-    "postinstall": "ng build --app dashboard && mv dist/* ."
+    "postinstall": "ng build && mv dist/* ."
   },
   "engines": {
     "node": "8.1.4"
